<resources>
    <string name="app_name">SkinCare</string>

    <string name="page_start_start">Get Started</string>
    <string name="page_start_info">Build Skin Profile\nTake Selfie\nSee Skin Analysis\nGet Personal Advice\nGet Product Recommendations</string>

    <string name="page_skintype_what">what&#160;</string>
    <string name="page_skintype_isyour">is your</string>
    <string name="page_skintype_skintype">Skin type?</string>
    <string name="page_skintype_normal">Normal</string>
    <string name="page_skintype_dry">Dry</string>
    <string name="page_skintype_oily">Oily</string>
    <string name="page_skintype_sensitive">Sensitive</string>
    <string name="page_skintype_combination">Combination</string>
    <string name="page_skintype_null">I don\'t know</string>

    <string name="page_findskin_let">let&#160;</string>
    <string name="page_findskin_ushelpidentify">us help identify</string>
    <string name="page_findskin_youskintype">Your Skin Type</string>
    <string name="page_findskin_index1">(1/5)</string>
    <string name="page_findskin_index2">(2/5)</string>
    <string name="page_findskin_index3">(3/5)</string>
    <string name="page_findskin_index4">(4/5)</string>
    <string name="page_findskin_index5">(5/5)</string>

    <string name="page_findskin_one">Select the option that best describes your skin.</string>
    <string name="page_findskin_one_select1">My skin usually feels dry and tight.</string>
    <string name="page_findskin_one_select2">My skin usually feels greasy\nand can often look shiny.</string>
    <string name="page_findskin_one_select3">My skin usually feels soft and comfortable.</string>
    <string name="page_findskin_one_select4">My skin can often get red and irritate easily.</string>
    <string name="page_findskin_one_select5">My skin feels greasy in the T-zone area\nbut the rest feels fairly dry/normal.</string>

    <string name="page_findskin_two">How visible are your pores?</string>
    <string name="page_findskin_two_select1">Small pores that are not that visible.</string>
    <string name="page_findskin_two_select2">Large pores that are very visible.</string>
    <string name="page_findskin_two_select3">I don\'t see any pores</string>
    <string name="page_findskin_two_select4">I\'ve never noticed my pore size\nbut I have surface blood vessels.</string>
    <string name="page_findskin_two_select5">The pores are larger on\nmy forehead, nose and jaw,\nbut normal in the rest of the face.</string>

    <string name="page_findskin_three">How does your skin feel in the afternoon?</string>
    <string name="page_findskin_three_select1">My skin usually feels dry and tight.</string>
    <string name="page_findskin_three_select2">My skin usually feels greasy\nand can often look shiny.</string>
    <string name="page_findskin_three_select3">My skin feels normal, no major problems.</string>
    <string name="page_findskin_three_select4">My skin can often get quite red and irritated.</string>
    <string name="page_findskin_three_select5">My skin feels greasy in the T-zone area\nbut the rest feels fairly dry/normal.</string>

    <string name="page_findskin_four">How often do you get spots or blemishes?</string>
    <string name="page_findskin_four_select1">Never.</string>
    <string name="page_findskin_four_select2">Every day or weekly.</string>
    <string name="page_findskin_four_select3">About once a month.</string>
    <string name="page_findskin_four_select4">Very rarely.</string>
    <string name="page_findskin_four_select5">Every now and then,\nbut most often on the forehead,\nnose or chin area.</string>

    <string name="page_findskin_five">How does your skin feel when you first wake up\nin the morning?</string>
    <string name="page_findskin_five_select1">My skin usually feels dry and tight.</string>
    <string name="page_findskin_five_select2">Greasy and pores are visible around the face.</string>
    <string name="page_findskin_five_select3">Soft and good.</string>
    <string name="page_findskin_five_select4">Quite thin, skin feels translucent.</string>
    <string name="page_findskin_five_select5">T-zone feels normal but cheek areas are dry and tight.</string>

    <string name="page_skinconcerns_doyou">do you&#160;</string>
    <string name="page_skinconcerns_haveanypersonal">have any personal</string>
    <string name="page_skinconcerns_skinconcerns">Skin concerns?</string>
    <string name="page_skinconcerns_selectallthatapply">Select all that apply.</string>

    <string name="page_skinconcerns_wrinkles_and_find_lines">Wrinkles and\nfind lines</string>
    <string name="page_skinconcerns_dull_skin">Dull skin</string>
    <string name="page_skinconcerns_aging">Aging</string>
    <string name="page_skinconcerns_visible_pores">Visible Pores</string>
    <string name="page_skinconcerns_sagging_skin">Sagging skin</string>
    <string name="page_skinconcerns_hyperpigmentation">Hyper\npigmentation</string>
    <string name="page_skinconcerns_acne">Acne</string>
    <string name="page_skinconcerns_next">Next</string>

    <string name="page_gender_what">what&#160;</string>
    <string name="page_gender_isyour">is your</string>
    <string name="page_gender_gender">Gender?</string>
    <string name="page_gender_woman">Woman</string>
    <string name="page_gender_man">Man</string>
    <string name="page_gender_non_binary">Non-binary</string>
    <string name="page_gender_prefer_not_to_say">Prefer not to say</string>

    <string name="page_age_how">how&#160;</string>
    <string name="page_age_oldare">old are</string>
    <string name="page_age_you">You?</string>
    <string name="page_age_18_24">18&#8211;24</string>
    <string name="page_age_25_34">25&#8211;34</string>
    <string name="page_age_35_44">35&#8211;44</string>
    <string name="page_age_45_54">45&#8211;54</string>
    <string name="page_age_55">55+</string>

    <string name="page_camera_take">Take Selfie</string>
    <string name="page_camera_guide_one">Remove\nGlasses</string>
    <string name="page_camera_guide_two">Pull Back\nHair</string>
    <string name="page_camera_guide_three">Remove your\nmakeup</string>
    <string name="page_camera_guide_four">Face directly\nat camera</string>
    <string name="page_camera_guide_five">Keep neutral\nexpression</string>

    <string name="page_imagecheck_result">Check Results</string>
    <string name="page_imagecheck_retake">Retake</string>

    <string name="text_darkcircles">Dark Circles</string>
    <string name="text_eyebags">Eye Bags</string>
    <string name="text_wrinkles">Wrinkles</string>
    <string name="text_pigmentation">Pigmentation</string>
    <string name="text_redness">Redness</string>
    <string name="text_texture">Texture</string>
    <string name="text_skinshine">Skin Shine</string>
    <string name="text_unevenskintone">Uneven Skin Tone</string>
    <string name="text_skinsagging">Skin Sagging</string>
    <string name="text_skinanalysisresult">Skin Analysis Result</string>
    <string name="text_startover">Start Over</string>

    <string name="page_dialog_daily_1d">1D</string>
    <string name="page_dialog_daily_1w">1W</string>
    <string name="page_dialog_daily_1m">1M</string>
    <string name="page_dialog_daily_2m">2M</string>
    <string name="page_dialog_daily_3m">3M</string>

    <string name="page_datacheck_is">is&#160;</string>
    <string name="page_datacheck_thisinformation">this information</string>
    <string name="page_datacheck_correct">Correct?</string>
    <string name="page_datacheck_skintype">Your skin type</string>
    <string name="page_datacheck_skinconcerns">Your skin concerns</string>
    <string name="page_datacheck_gender">Your gender</string>
    <string name="page_datacheck_age">Your age</string>
    <string name="page_datacheck_ok">Yes\nGo to selfie</string>
    <string name="page_datacheck_no">No\nGo to start over</string>

    <string name="page_result_recommend">Recommend</string>
</resources>