<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#505050">

    <TextView
        android:id="@+id/tv_find_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:fontFamily="@font/jost400book"
        android:text="@string/page_findskin_index1"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:alpha="0.4"
        android:scaleType="centerCrop"
        android:src="@drawable/background_app" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jost600semi"
                    android:text="@string/page_findskin_let"
                    android:textColor="#ffffff"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jost300light"
                    android:text="@string/page_findskin_ushelpidentify"
                    android:textColor="#ffffff"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jost700bold"
                    android:text="@string/page_findskin_youskintype"
                    android:textColor="#ffffff"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/tv_find_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jost500medium"
                    android:gravity="center"
                    android:text="@string/page_findskin_one"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_find_one"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_item_btn"
                    android:fontFamily="@font/jost500medium"
                    android:text="@string/page_findskin_one_select1"
                    android:textColor="@drawable/selector_item_btn_text"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_find_two"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_item_btn"
                    android:fontFamily="@font/jost500medium"
                    android:text="@string/page_findskin_one_select2"
                    android:textColor="@drawable/selector_item_btn_text"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_find_three"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_item_btn"
                    android:fontFamily="@font/jost500medium"
                    android:text="@string/page_findskin_one_select3"
                    android:textColor="@drawable/selector_item_btn_text"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_find_four"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_item_btn"
                    android:fontFamily="@font/jost500medium"
                    android:text="@string/page_findskin_one_select4"
                    android:textColor="@drawable/selector_item_btn_text"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_find_five"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_item_btn"
                    android:fontFamily="@font/jost500medium"
                    android:text="@string/page_findskin_one_select5"
                    android:textColor="@drawable/selector_item_btn_text"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>